syntax = "proto3";

package chat;
option go_package = "./;chat";

message Message {
    string planeta = 1;
    string ciudad = 2;
    string valor = 3;

    int32 servidor = 4;
}

service Chat {
    rpc AddCityMessage(Message) returns (Message) {}
    rpc UpdateNameMessage(Message) returns (Message) {}
    rpc UpdateNumberMessage(Message) returns (Message) {}
    rpc DeleteCityMessage(Message) returns (Message) {}
}